// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`.render(thread, content) post a tweet 1`] = `
[
  {
    "body": {
      "data": {
        "id": "1234567890",
        "text": "Hello World",
      },
    },
    "code": 200,
    "uploadedMedia": null,
  },
  {
    "body": {
      "data": {
        "id": "1234567890",
        "text": "Hello World",
      },
    },
    "code": 200,
    "uploadedMedia": null,
  },
]
`;

exports[`.render(thread, content) post a tweet 2`] = `
[
  {
    "accomplishRequest": [Function],
    "asApplication": false,
    "key": "---",
    "mediaSources": null,
    "refreshTarget": [Function],
    "request": {
      "method": "POST",
      "params": {
        "text": "Hello World",
      },
      "url": "2/tweets",
    },
    "target": TwitterTweetTarget {
      "$$typeofThread": true,
      "agentId": "1234567890",
      "platform": "twitter",
      "tweetId": undefined,
    },
  },
  {
    "accomplishRequest": [Function],
    "asApplication": false,
    "key": "---",
    "mediaSources": null,
    "refreshTarget": [Function],
    "request": {
      "method": "POST",
      "params": {
        "text": "Foo Bar Baz",
      },
      "url": "2/tweets",
    },
    "target": TwitterTweetTarget {
      "$$typeofThread": true,
      "agentId": "1234567890",
      "platform": "twitter",
      "tweetId": undefined,
    },
  },
]
`;

exports[`.render(thread, content) reply to a tweet 1`] = `
[
  {
    "body": {
      "data": {
        "id": "2222222222222",
        "text": "Hello World",
      },
    },
    "code": 200,
    "uploadedMedia": null,
  },
  {
    "body": {
      "data": {
        "id": "2222222222222",
        "text": "Hello World",
      },
    },
    "code": 200,
    "uploadedMedia": null,
  },
]
`;

exports[`.render(thread, content) reply to a tweet 2`] = `
[
  {
    "accomplishRequest": [Function],
    "asApplication": false,
    "key": "---",
    "mediaSources": null,
    "refreshTarget": [Function],
    "request": {
      "method": "POST",
      "params": {
        "text": "Hello World",
      },
      "url": "2/tweets",
    },
    "target": TwitterTweetTarget {
      "$$typeofThread": true,
      "agentId": "1234567890",
      "platform": "twitter",
      "tweetId": "1111111111111",
    },
  },
  {
    "accomplishRequest": [Function],
    "asApplication": false,
    "key": "---",
    "mediaSources": null,
    "refreshTarget": [Function],
    "request": {
      "method": "POST",
      "params": {
        "text": "Foo Bar Baz",
      },
      "url": "2/tweets",
    },
    "target": TwitterTweetTarget {
      "$$typeofThread": true,
      "agentId": "1234567890",
      "platform": "twitter",
      "tweetId": "1111111111111",
    },
  },
]
`;

exports[`.render(thread, content) send direct message 1`] = `
{
  "jobs": [
    {
      "accomplishRequest": [Function],
      "asApplication": false,
      "key": "twtr.1234567890.9876543210",
      "mediaSources": null,
      "refreshTarget": null,
      "request": {
        "method": "POST",
        "params": {
          "event": {
            "message_create": {
              "message_data": {
                "attachment": undefined,
                "text": "Hello World",
              },
              "target": {
                "recipient_id": "9876543210",
              },
            },
            "type": "message_create",
          },
        },
        "url": "1.1/direct_messages/events/new.json",
      },
      "target": TwitterChat {
        "$$typeofThread": true,
        "agentId": "1234567890",
        "platform": "twitter",
        "userId": "9876543210",
      },
    },
    {
      "accomplishRequest": [Function],
      "asApplication": false,
      "key": "twtr.1234567890.9876543210",
      "mediaSources": null,
      "refreshTarget": null,
      "request": {
        "method": "POST",
        "params": {
          "event": {
            "message_create": {
              "message_data": {
                "attachment": undefined,
                "text": "Foo Bar Baz",
              },
              "target": {
                "recipient_id": "9876543210",
              },
            },
            "type": "message_create",
          },
        },
        "url": "1.1/direct_messages/events/new.json",
      },
      "target": TwitterChat {
        "$$typeofThread": true,
        "agentId": "1234567890",
        "platform": "twitter",
        "userId": "9876543210",
      },
    },
  ],
  "results": [
    {
      "body": {
        "event": {},
      },
      "code": 200,
      "uploadedMedia": null,
    },
    {
      "body": {
        "event": {},
      },
      "code": 200,
      "uploadedMedia": null,
    },
  ],
  "tasks": [
    {
      "payload": [
        {
          "accomplishRequest": [Function],
          "asApplication": false,
          "key": "twtr.1234567890.9876543210",
          "mediaSources": null,
          "refreshTarget": null,
          "request": {
            "method": "POST",
            "params": {
              "event": {
                "message_create": {
                  "message_data": {
                    "attachment": undefined,
                    "text": "Hello World",
                  },
                  "target": {
                    "recipient_id": "9876543210",
                  },
                },
                "type": "message_create",
              },
            },
            "url": "1.1/direct_messages/events/new.json",
          },
          "target": TwitterChat {
            "$$typeofThread": true,
            "agentId": "1234567890",
            "platform": "twitter",
            "userId": "9876543210",
          },
        },
        {
          "accomplishRequest": [Function],
          "asApplication": false,
          "key": "twtr.1234567890.9876543210",
          "mediaSources": null,
          "refreshTarget": null,
          "request": {
            "method": "POST",
            "params": {
              "event": {
                "message_create": {
                  "message_data": {
                    "attachment": undefined,
                    "text": "Foo Bar Baz",
                  },
                  "target": {
                    "recipient_id": "9876543210",
                  },
                },
                "type": "message_create",
              },
            },
            "url": "1.1/direct_messages/events/new.json",
          },
          "target": TwitterChat {
            "$$typeofThread": true,
            "agentId": "1234567890",
            "platform": "twitter",
            "userId": "9876543210",
          },
        },
      ],
      "type": "dispatch",
    },
  ],
}
`;
